# aide-de-camp

./: .coverage  .gitignore  .needle-predispatch-sha  .needle.yaml  CLAUDE.md  README-PHASE4.md  README.md  adc  analyze_zai_baseline.py  bench_json_parsing.py  comparison_report.md  demo_self_modification.py  error-analysis-report-adc-2whij.md  error-analysis-report.md  error_analysis_report.md  error_analysis_report_adc-5ump7.md  failure-patterns-report-adc-xl3ei.md  failure-patterns-report.md  file::memory:?cache=shared  measure_zai_baseline.py  options-pipeline-ibkr-mcp-comparative-analysis-july2024.md  options-pipeline-vs-ibkr-mcp-30-day-analysis.md  options-pipeline-vs-ibkr-mcp-30-day-error-analysis-synthesis.md  options-vs-ibkr-mcp-30-day-comparative-analysis-july2026.md  options-vs-ibkr-mcp-30-day-comparative-analysis-july24-2026-adc-350zf.md  options-vs-ibkr-mcp-30-day-comparative-analysis-july24-final.md  options-vs-ibkr-mcp-30-day-error-analysis-july24-2026-adc-1iks6.md  options-vs-ibkr-mcp-30-day-error-analysis-july24-2026-verification.md  options_pipeline_ibkr_error_analysis.md  options_pipeline_vs_ibkr_mcp_30day_comparison_July2026.md  pipeline_error_analysis.md  pipeline_vs_ibkr_analysis.md  profile_json_parsing.py  profile_json_parsing_comparison.py  profile_json_parsing_detailed.py  profile_json_parsing_full_comparison.py  profile_json_parsing_split_vs_find.py  profiling-baseline.md  profiling-verification-report.md  pyproject.toml  (+29 more)
.beads/: beads.db.backup.20260702133953  beads.db.backup.20260702150115  beads.db.backup.20260702152200  config.yaml  (+12 more)
(+1747 files in other folders)
